Disabling 'Use Material Caching' causes Blender to crash when calling LibLoad #45267

Closed
opened 2015-07-02 02:03:29 +02:00 by mobious · 5 comments

System Information
Windows 7 64-bit
Intel HD Graphics 4000

Blender Version
Broken: 2.75 (c6b042b)
Worked: 2.74 (000dfc0)

Files
start.blend -- Contains an empty that runs the following script:

import bge

path = bge.logic.expandPath('//load.blend')
print('loading:', path)
bge.logic.LibLoad(path, 'Scene')

load.blend - Contains the default cube

Short description of error
Calling LibLoad in 'Scene' mode on any file causes Blender to crash if the 'Use Material Caching' option is disabled. This is almost certainly caused by fix 377822729c for another LibLoad/LibFree crash with material caching.

Exact steps for others to reproduce the error
Extract the attached files to the same location and open start.blend. Blender will immediately crash upon starting the game engine. Reopen the file and enable the 'Use Material Caching' option under Properties -> System. The crash should no longer occur and the cube should load properly.

Additional Notes

  • It does not seems to make any difference if the loaded cube has a material or not.
  • Attempting to load a file that contains no objects appears to always crash Blender regardless of the current material caching setting.
**System Information** Windows 7 64-bit Intel HD Graphics 4000 **Blender Version** Broken: 2.75 (c6b042b) Worked: 2.74 (000dfc0) **Files** [start.blend](https://archive.blender.org/developer/F199377/start.blend) -- Contains an empty that runs the following script: ``` import bge path = bge.logic.expandPath('//load.blend') print('loading:', path) bge.logic.LibLoad(path, 'Scene') ``` [load.blend](https://archive.blender.org/developer/F199378/load.blend) - Contains the default cube **Short description of error** Calling LibLoad in 'Scene' mode on any file causes Blender to crash if the 'Use Material Caching' option is disabled. This is almost certainly caused by fix 377822729c for another LibLoad/LibFree crash with material caching. **Exact steps for others to reproduce the error** Extract the attached files to the same location and open start.blend. Blender will immediately crash upon starting the game engine. Reopen the file and enable the 'Use Material Caching' option under Properties -> System. The crash should no longer occur and the cube should load properly. **Additional Notes** - It does not seems to make any difference if the loaded cube has a material or not. - Attempting to load a file that contains no objects appears to always crash Blender regardless of the current material caching setting.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mobious

Added subscriber: @mobious

This issue was referenced by e61ead7d4c

This issue was referenced by e61ead7d4c0a0067fb55f6abb68f637a8fd21d1f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 2d25656e05

This issue was referenced by 2d25656e051b74707b22e8af2202aafc0bb6e132
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#45267
No description provided.