BGE: Fix T45267 Lib load without material caching.